# DEV7

./: .gitignore  .gitmodules  Brewfile  CMakeLists.txt  CONTRIBUTING.md  CREDITS  LICENSE  LOADER7VC.sln  Makefile  README.md  THANKS.md  TODO.MD  check_deps.ps1  configure  git_updater.py  install_deps  meson.build  repositorystructure.tsv  vcpkg.json
.github/: dependabot.yml  issue_template.yml  pull_request_template.md
.github/workflows/: build.yml  linux-cmake.yml  linux-debug.yml  linux-tools.yml  linux.yml  loadermdo-original.yml  macos.yml  msbuild.yml  msvc600.yml  windows-cmake.yml  windows.yml
BCD1Creator/: BCD1Creator.cpp  CMakeLists.txt
DEV7Launcher/: CMakeLists.txt  DEV7Launcher.cpp
DecompOBC/: CMakeLists.txt  DecompOBC.cpp
DecompOBC/DecompOBC/: DecompOBC.cs  DecompOBC.csproj
DecompOBC_CSharp/: DecompOBC.sln  README.MD
DecompOBC_CSharp/DecompOBC/: DecompOBC.cs
IMGConverter/: IMGConverter.py  INSTALL.md  pyproject.toml  requirements.txt
IMGIdentifier/: IMGIdentifier.py
LICENSES/: LICENSE.ZLIB  README.md
LOADER7VC/: .editorconfig  LOADER7VC.cs  LOADER7VC.csproj  LOADER7VC.sln  README.MD
LOADER7VC/LOADER7VC/: LOADER7VC.cs  LOADER7VC.csproj
LoaderMDO/: LoaderMDO.cpp  LoaderMDO.dsp  LoaderMDO.ncb  LoaderMDO.opt  LoaderMDO.plg
ModelPathDumper/: ModelPathDumper.cpp
OBCViewer/: CMakeLists.txt  Makefile  OBCViewer.cpp
adibounet/: adb3server.py  install_deps.sh  start_server.bat  start_server.sh
common-code/: ConsoleUtils.h  TaskExecution.h
common-tools/convert_bin/: convert_bin.cpp
common-tools/create_iso/: create_iso.cpp
common-tools/create_zip/: create_zip.cpp
common-tools/extract_iso/: extract_iso.cpp
common-tools/linux/convert_bin/: CMakeLists.txt  convert_bin.cpp
common-tools/linux/create_iso/: CMakeLists.txt  create_iso.cpp
common-tools/linux/create_tar/: CMakeLists.txt  create_tar.cpp
common-tools/linux/create_zip/: CMakeLists.txt  create_zip.cpp
common-tools/linux/extract_iso/: extract_iso.cpp
common-tools/nowin/create_tar/: create_tar.cpp
common-tools/nowin/create_zip/: create_zip.cpp
debug-symbols/: loader7.map
docs/: Compiling.md  Folderstructure.csv  Platforms.csv  README.MD  RELinks.md  todo.md
ghidra-zip-files/: adibou3.exe.gzf  notes.txt
icons/scripts/: d7l_icon_msvc.py  dev7_github_logo.py
ida-databases/: Adibou3.EXE.i64  St500f22.dll.i64  st15f8.dll.i64
install_deps/: install_deps.bat  install_deps_apt  install_deps_dnf  install_deps_zypper
patches/SetupPatcher/: SetupPatcher.sln
patches/SetupPatcher/SetupPatcher/: SetupPatcher.cpp  SetupPatcher.vcxproj  SetupPatcher.vcxproj.filters
patches/Y2K38Patcher/: Y2K38Patcher.sln
patches/Y2K38Patcher/Y2K38Patcher/: Y2K38Patcher.cpp  Y2K38Patcher.vcxproj  Y2K38Patcher.vcxproj.filters
rewritten-improved-software/LoaderMDO32/: LoaderMDO.cpp  LoaderMDO.dsp  build_debug.bat  cleanup.bat
rewritten-improved-software/LoaderMDO64/: LoaderMDO.sln
rewritten-improved-software/LoaderMDO64/LoaderMDO/: LoaderMDO.cpp  LoaderMDO.vcxproj.filters
rewritten-modern-software/: README.md
rewritten-modern-software/LoaderMDO/LoaderMDO/: LoaderMDO.cpp  LoaderMDO.vcxproj
rewritten-modern-software/SYSTEM/SYSTEM/: SYSTEM.cpp  SYSTEM.rc  SYSTEM.vcxproj
rewritten-modern-software/SYSTEM_RussianRelease/: SYSTEM.sln
rewritten-modern-software/SYSTEM_RussianRelease/SYSTEM/: Resource.h  SYSTEM.cpp  SYSTEM.vcxproj.filters  framework.h
rewritten-original-software/: README.md
rewritten-original-software/LoaderMDO/: LoaderMDO.cpp  LoaderMDO.dsw  Makefile  build_debug.bat  build_release.bat  cleanup.bat  copy_LoaderMDO.bat  md5.txt  md5check.py
rewritten-original-software/SYSTEM/: SYSTEM.cpp  StdAfx.cpp  build_debug.bat  build_release.bat
rewritten-original-software/SYSTEM_RussianRelease/: SYSTEM.cpp  SYSTEM.dsp  SYSTEM.dsw  build_debug.bat  cleanup.bat  copy_SYSTEM.bat
rewritten-software-ports/linux/LoaderMDO/: CMakeLists.txt  LoaderMDO.cpp
source/: CVMDDecoder.cpp  Dev3dZones.cpp  DevCall.cpp  DevEditor.cpp  DevList.cpp  DevObc.cpp  ExeEditor.cpp  ExeSound.cpp  ExeStr.cpp  ExeStream.cpp  vmd.c  windowpc.cpp
source/Lib Files/: MDOPCFile.cpp  Vcdrom.cpp
source/Libs DBase/: I4info.cpp  LibDataBase.cpp  LibDataTable.cpp
source/Libs Engine/: DIdent.cpp  DObj.cpp  DString.cpp  UDMem.cpp
source/Libs Graph/: Adpcm.cpp  Cache.cpp  Dvmd.cpp  Imd_ptr.cpp  vesa32.cpp
source/Libs INI/: TreeINI.cpp
source/Libs Muzikotron/: MemorySound.cpp  Muzikotron.cpp  Muzikotron.h  SoundQueue.cpp  zikSoundEvent.cpp  zikSoundEvent.h  zikSoundsQueue.h
source/Libs TTS/: MDOTTS.cpp
source/Libs Tracker/: ChannelsPC.cpp  Effects.cpp  Effects.h  MixerPC.cpp  SoundBuffer.cpp  SoundBuffer.h  TrackerPC.cpp  TrackerPC.h
source/Libs UCL/: ucl_init.cpp
source/Libs files/: ChannelsPC.h  DateUtils.cpp  DateUtilsPC.cpp  FilesTools.cpp
source/Libs page/: Bti.cpp
tools-win/CLEANER/: CLEANER.BAT
tools-win/CTRKTextLoader/: CTRKTextLoader.sln
tools-win/CTRKTextLoader/CTRKTextLoader/: CTRKTextLoader.cs
tools-win/DEV7Monitor/: DEV7Monitor.sln
tools-win/DLLInjector/: CMakeLists.txt  DLLInjector.cpp
tools-win/LOADER7VC/: LOADER7VC.sln
tools-win/LoaderMDO/: LoaderMDO.plg
tools/AdultCornerDecoder/: decoder.py
tools/AdultCornerEncoder/: encoder.py
tools/BCD1Creator/: BCD1Creator.cpp  CMakeLists.txt  Makefile
tools/CTRKViewer/: CMakeLists.txt  CTRKViewer  CTRKViewer.cpp
tools/DEV7Launcher/: CMakeLists.txt  DEV7Launcher.cpp  Makefile
tools/IMGConverter/: .gitignore  IMGConverter.py  INSTALL.md  compile_win_exe.bat  pyproject.toml
tools/IMGIdentifier/: IMGIdentifier.py
tools/LOADER7VC/: LOADER7VC.sln
tools/ModelPathDumper/: CMakeLists.txt  Makefile  ModelPathDumper.cpp
tools/OBCEditor/: OBCEditor.py
tools/OBCViewer/: .gitignore  CMakeLists.txt  OBCViewer.cpp
tools/OBJDumper/: CMakeLists.txt  OBJDumper.cpp
tools/PKLiteDetector/: PKLiteDetector.py
tools/PLAViewer/: CMakeLists.txt  PLAViewer.cpp
tools/PetiteDetector/: PetiteDetector.py
tools/SecuROMDetector/: SecuROMDetector.py
tools/copyDatas/: copyDatas.py  setup.bat
(+12 files in other folders)
