[tool.poetry]
name = "IMGConverter"
version = "0.1.0"
description = "Converter to convert an Image to an IMG file, that can be used in-game."
authors = ["BJNFNE <bjnfne@web.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"