[tool.poetry]
name = "IMGConverter"
version = "0.1.1"
description = "Converter to convert an Image to an IMG file, that can be used in-game."
authors = ["BJNFNE"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pillow = "^12.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"